refactor(net): tcp